{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 66,
  "lineage": "f7286d74-b2b3-534f-e37e-f9d81fe2e99b",
  "resources": [
    {
      "module": "module.lb_module",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:000000000000:loadbalancer/app/staging-HCLTuring-alb/967d949b5101d2e7",
            "arn_suffix": "app/staging-HCLTuring-alb/967d949b5101d2e7",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "staging-HCLTuring-alb.elb.localhost.localstack.cloud",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:000000000000:loadbalancer/app/staging-HCLTuring-alb/967d949b5101d2e7",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "staging-HCLTuring-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-e2bf3d85db19b5830"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-2408fe29d8d0a7680"
              },
              {
                "subnet_id": "subnet-689993796ca1111be"
              }
            ],
            "subnets": [
              "subnet-2408fe29d8d0a7680",
              "subnet-689993796ca1111be"
            ],
            "tags": {
              "Application": "multi-env",
              "ManagedBy": "HCL",
              "Name": "staging-HCLTuring-alb",
              "Owned": "Turing"
            },
            "tags_all": {
              "Application": "multi-env",
              "ManagedBy": "HCL",
              "Name": "staging-HCLTuring-alb",
              "Owned": "Turing"
            },
            "vpc_id": "vpc-9de94bdc032001c0b",
            "xff_header_processing_mode": "append",
            "zone_id": "Z2P70J7EXAMPLE"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_group_module.aws_iam_instance_profile.ec2_profile",
            "module.security_group_module.aws_iam_policy.secrets_access",
            "module.security_group_module.aws_iam_role.ec2_role",
            "module.security_group_module.aws_iam_role_policy_attachment.ec2_secrets",
            "module.security_group_module.aws_iam_role_policy_attachment.ec2_ssm",
            "module.security_group_module.aws_security_group.alb",
            "module.security_group_module.aws_security_group.ec2",
            "module.vpc_module.aws_eip.nat",
            "module.vpc_module.aws_internet_gateway.main",
            "module.vpc_module.aws_nat_gateway.main",
            "module.vpc_module.aws_route.attach_gateway",
            "module.vpc_module.aws_route_table.private",
            "module.vpc_module.aws_route_table_association.private",
            "module.vpc_module.aws_subnet.private",
            "module.vpc_module.aws_subnet.public",
            "module.vpc_module.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.lb_module",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:000000000000:listener/app/staging-HCLTuring-alb/967d949b5101d2e7/af4b30612998dba2",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:000000000000:targetgroup/staging-HCLTuring-tg/39608d3a71435954",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:000000000000:listener/app/staging-HCLTuring-alb/967d949b5101d2e7/af4b30612998dba2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:000000000000:loadbalancer/app/staging-HCLTuring-alb/967d949b5101d2e7",
            "mutual_authentication": [],
            "port": 4566,
            "protocol": "HTTP",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {
              "Application": "multi-env",
              "ManagedBy": "HCL",
              "Owned": "Turing"
            },
            "tags_all": {
              "Application": "multi-env",
              "ManagedBy": "HCL",
              "Owned": "Turing"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.lb_module.aws_lb.main",
            "module.lb_module.aws_lb_target_group.main",
            "module.security_group_module.aws_iam_instance_profile.ec2_profile",
            "module.security_group_module.aws_iam_policy.secrets_access",
            "module.security_group_module.aws_iam_role.ec2_role",
            "module.security_group_module.aws_iam_role_policy_attachment.ec2_secrets",
            "module.security_group_module.aws_iam_role_policy_attachment.ec2_ssm",
            "module.security_group_module.aws_security_group.alb",
            "module.security_group_module.aws_security_group.ec2",
            "module.vpc_module.aws_eip.nat",
            "module.vpc_module.aws_internet_gateway.main",
            "module.vpc_module.aws_nat_gateway.main",
            "module.vpc_module.aws_route.attach_gateway",
            "module.vpc_module.aws_route_table.private",
            "module.vpc_module.aws_route_table_association.private",
            "module.vpc_module.aws_subnet.private",
            "module.vpc_module.aws_subnet.public",
            "module.vpc_module.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.lb_module",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:000000000000:targetgroup/staging-HCLTuring-tg/39608d3a71435954",
            "arn_suffix": "targetgroup/staging-HCLTuring-tg/39608d3a71435954",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:000000000000:targetgroup/staging-HCLTuring-tg/39608d3a71435954",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "staging-HCLTuring-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Application": "multi-env",
              "ManagedBy": "HCL",
              "Name": "staging-HCLTuring-tg",
              "Owned": "Turing"
            },
            "tags_all": {
              "Application": "multi-env",
              "ManagedBy": "HCL",
              "Name": "staging-HCLTuring-tg",
              "Owned": "Turing"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                  }
                ],
                "unhealthy_state_routing": [
                  {
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-9de94bdc032001c0b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_group_module.aws_iam_instance_profile.ec2_profile",
            "module.security_group_module.aws_iam_policy.secrets_access",
            "module.security_group_module.aws_iam_role.ec2_role",
            "module.security_group_module.aws_iam_role_policy_attachment.ec2_secrets",
            "module.security_group_module.aws_iam_role_policy_attachment.ec2_ssm",
            "module.security_group_module.aws_security_group.alb",
            "module.security_group_module.aws_security_group.ec2",
            "module.vpc_module.aws_eip.nat",
            "module.vpc_module.aws_internet_gateway.main",
            "module.vpc_module.aws_nat_gateway.main",
            "module.vpc_module.aws_route.attach_gateway",
            "module.vpc_module.aws_route_table.private",
            "module.vpc_module.aws_route_table_association.private",
            "module.vpc_module.aws_subnet.private",
            "module.vpc_module.aws_subnet.public",
            "module.vpc_module.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_group_module",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:security-group/sg-e2bf3d85db19b5830",
            "description": "Security group for Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-e2bf3d85db19b5830",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "staging-HCLTuring-alb-sg",
            "name_prefix": "",
            "owner_id": "000000000000",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "multi-env",
              "ManagedBy": "HCL",
              "Name": "staging-HCLTuring-alb-sg",
              "Owned": "Turing"
            },
            "tags_all": {
              "Application": "multi-env",
              "ManagedBy": "HCL",
              "Name": "staging-HCLTuring-alb-sg",
              "Owned": "Turing"
            },
            "timeouts": null,
            "vpc_id": "vpc-9de94bdc032001c0b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_module.aws_eip.nat",
            "module.vpc_module.aws_internet_gateway.main",
            "module.vpc_module.aws_nat_gateway.main",
            "module.vpc_module.aws_route.attach_gateway",
            "module.vpc_module.aws_route_table.private",
            "module.vpc_module.aws_route_table_association.private",
            "module.vpc_module.aws_subnet.private",
            "module.vpc_module.aws_subnet.public",
            "module.vpc_module.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_group_module",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:security-group/sg-c0f276c8ad008c56f",
            "description": "Security group for EC2 instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-c0f276c8ad008c56f",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-e2bf3d85db19b5830"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "staging-HCLTuring-ec2-sg",
            "name_prefix": "",
            "owner_id": "000000000000",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "multi-env",
              "ManagedBy": "HCL",
              "Name": "staging-HCLTuring-ec2-sg",
              "Owned": "Turing"
            },
            "tags_all": {
              "Application": "multi-env",
              "ManagedBy": "HCL",
              "Name": "staging-HCLTuring-ec2-sg",
              "Owned": "Turing"
            },
            "timeouts": null,
            "vpc_id": "vpc-9de94bdc032001c0b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_group_module.aws_security_group.alb",
            "module.vpc_module.aws_eip.nat",
            "module.vpc_module.aws_internet_gateway.main",
            "module.vpc_module.aws_nat_gateway.main",
            "module.vpc_module.aws_route.attach_gateway",
            "module.vpc_module.aws_route_table.private",
            "module.vpc_module.aws_route_table_association.private",
            "module.vpc_module.aws_subnet.private",
            "module.vpc_module.aws_subnet.public",
            "module.vpc_module.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-524553876b7b8aa24",
            "arn": "arn:aws:ec2:us-east-1::elastic-ip/eipalloc-524553876b7b8aa24",
            "association_id": "eipassoc-e9dbb1a06466ca12f",
            "domain": "vpc",
            "id": "eipalloc-524553876b7b8aa24",
            "network_interface": "eni-56cbbc44ba2d35b26",
            "private_dns": "ip-10-88-110-223.ec2.internal",
            "private_ip": "10.88.110.223",
            "public_dns": "ec2-127-253-122-222.compute-1.amazonaws.com",
            "public_ip": "127.253.122.222",
            "tags": {
              "Application": "multi-env",
              "ManagedBy": "HCL",
              "Name": "staging-HCLTuring-nat-eip",
              "Owned": "Turing"
            },
            "tags_all": {
              "Application": "multi-env",
              "ManagedBy": "HCL",
              "Name": "staging-HCLTuring-nat-eip",
              "Owned": "Turing"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_module.aws_internet_gateway.main",
            "module.vpc_module.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:internet-gateway/igw-d94c5a9483e51c839",
            "id": "igw-d94c5a9483e51c839",
            "owner_id": "000000000000",
            "tags": {
              "Application": "multi-env",
              "ManagedBy": "HCL",
              "Name": "staging-HCLTuring-igw",
              "Owned": "Turing"
            },
            "tags_all": {
              "Application": "multi-env",
              "ManagedBy": "HCL",
              "Name": "staging-HCLTuring-igw",
              "Owned": "Turing"
            },
            "vpc_id": "vpc-9de94bdc032001c0b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_module.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-524553876b7b8aa24",
            "association_id": "eipassoc-e9dbb1a06466ca12f",
            "connectivity_type": "public",
            "id": "nat-e48a59fef49bee5f2",
            "network_interface_id": "eni-56cbbc44ba2d35b26",
            "private_ip": "10.88.110.223",
            "public_ip": "127.253.122.222",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-689993796ca1111be",
            "tags": {
              "Application": "multi-env",
              "ManagedBy": "HCL",
              "Name": "staging-HCLTuring-nat-gateway",
              "Owned": "Turing"
            },
            "tags_all": {
              "Application": "multi-env",
              "ManagedBy": "HCL",
              "Name": "staging-HCLTuring-nat-gateway",
              "Owned": "Turing"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_module.aws_eip.nat",
            "module.vpc_module.aws_internet_gateway.main",
            "module.vpc_module.aws_subnet.public",
            "module.vpc_module.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_route",
      "name": "attach_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-d94c5a9483e51c839",
            "id": "r-rtb-7797ea83f543cfddf1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-7797ea83f543cfddf",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_module.aws_internet_gateway.main",
            "module.vpc_module.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:route-table/rtb-dbbfe440b471923f6",
            "id": "rtb-dbbfe440b471923f6",
            "owner_id": "000000000000",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-e48a59fef49bee5f2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Application": "multi-env",
              "ManagedBy": "HCL",
              "Name": "staging-HCLTuring-private-rt",
              "Owned": "Turing"
            },
            "tags_all": {
              "Application": "multi-env",
              "ManagedBy": "HCL",
              "Name": "staging-HCLTuring-private-rt",
              "Owned": "Turing"
            },
            "timeouts": null,
            "vpc_id": "vpc-9de94bdc032001c0b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_module.aws_eip.nat",
            "module.vpc_module.aws_internet_gateway.main",
            "module.vpc_module.aws_nat_gateway.main",
            "module.vpc_module.aws_subnet.public",
            "module.vpc_module.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-5f90af7aec28258e7",
            "route_table_id": "rtb-dbbfe440b471923f6",
            "subnet_id": "subnet-9bbcdfd669ddf3963"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_module.aws_eip.nat",
            "module.vpc_module.aws_internet_gateway.main",
            "module.vpc_module.aws_nat_gateway.main",
            "module.vpc_module.aws_route_table.private",
            "module.vpc_module.aws_subnet.private",
            "module.vpc_module.aws_subnet.public",
            "module.vpc_module.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-71e75ecb294073c8b",
            "route_table_id": "rtb-dbbfe440b471923f6",
            "subnet_id": "subnet-1abd0c1554bde6995"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_module.aws_eip.nat",
            "module.vpc_module.aws_internet_gateway.main",
            "module.vpc_module.aws_nat_gateway.main",
            "module.vpc_module.aws_route_table.private",
            "module.vpc_module.aws_subnet.private",
            "module.vpc_module.aws_subnet.public",
            "module.vpc_module.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:subnet/subnet-9bbcdfd669ddf3963",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-9bbcdfd669ddf3963",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "000000000000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Application": "multi-env",
              "ManagedBy": "HCL",
              "Name": "staging-HCLTuring-private-subnet-1",
              "Owned": "Turing",
              "Type": "private"
            },
            "tags_all": {
              "Application": "multi-env",
              "ManagedBy": "HCL",
              "Name": "staging-HCLTuring-private-subnet-1",
              "Owned": "Turing",
              "Type": "private"
            },
            "vpc_id": "vpc-9de94bdc032001c0b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_module.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:subnet/subnet-1abd0c1554bde6995",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-1abd0c1554bde6995",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "000000000000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Application": "multi-env",
              "ManagedBy": "HCL",
              "Name": "staging-HCLTuring-private-subnet-2",
              "Owned": "Turing",
              "Type": "private"
            },
            "tags_all": {
              "Application": "multi-env",
              "ManagedBy": "HCL",
              "Name": "staging-HCLTuring-private-subnet-2",
              "Owned": "Turing",
              "Type": "private"
            },
            "vpc_id": "vpc-9de94bdc032001c0b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_module.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:subnet/subnet-689993796ca1111be",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-689993796ca1111be",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "000000000000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Application": "multi-env",
              "ManagedBy": "HCL",
              "Name": "staging-HCLTuring-public-subnet-1",
              "Owned": "Turing",
              "Type": "public"
            },
            "tags_all": {
              "Application": "multi-env",
              "ManagedBy": "HCL",
              "Name": "staging-HCLTuring-public-subnet-1",
              "Owned": "Turing",
              "Type": "public"
            },
            "vpc_id": "vpc-9de94bdc032001c0b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_module.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:subnet/subnet-2408fe29d8d0a7680",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-2408fe29d8d0a7680",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "000000000000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Application": "multi-env",
              "ManagedBy": "HCL",
              "Name": "staging-HCLTuring-public-subnet-2",
              "Owned": "Turing",
              "Type": "public"
            },
            "tags_all": {
              "Application": "multi-env",
              "ManagedBy": "HCL",
              "Name": "staging-HCLTuring-public-subnet-2",
              "Owned": "Turing",
              "Type": "public"
            },
            "vpc_id": "vpc-9de94bdc032001c0b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_module.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:vpc/vpc-9de94bdc032001c0b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-f5235b4674890e669",
            "default_route_table_id": "rtb-7797ea83f543cfddf",
            "default_security_group_id": "sg-5ba513f7c7b775420",
            "dhcp_options_id": "default",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-9de94bdc032001c0b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-7797ea83f543cfddf",
            "owner_id": "000000000000",
            "tags": {
              "Application": "multi-env",
              "ManagedBy": "HCL",
              "Name": "staging-HCLTuring-vpc",
              "Owned": "Turing"
            },
            "tags_all": {
              "Application": "multi-env",
              "ManagedBy": "HCL",
              "Name": "staging-HCLTuring-vpc",
              "Owned": "Turing"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}